Applied the correct text labels to a group.
Also made added minimalistic styling to the page.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,17 @@
 	<head>
 		<meta charset="utf-8" />
 		<title>Machine Learning</title>
+		<style>
+		.label-predications
+		{
+			display: inline-block;
+		}
+		
+		.iteration-predictions
+		{
+			
+		}
+		</style>
 	</head>
 	<body>
 		<h1></h1>
