Added extra styling to the output.
This includes labels for the training iteration.

--- a/index.html
+++ b/index.html
@@ -4,14 +4,18 @@
 		<meta charset="utf-8" />
 		<title>Machine Learning</title>
 		<style>
-		.label-predications
+		.label-predictions
 		{
 			display: inline-block;
 		}
 		
-		.iteration-predictions
+		.iteration-predictions:nth-child(even)
 		{
-			
+			background-color: #eee;
+		}
+		.iteration-predictions:nth-child(odd)
+		{
+			background-color: #ddd;
 		}
 		</style>
 	</head>
